# KSABackend

./: .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem  key.pem
migrations/2023-03-15-122657_activities/: up.sql
migrations/2023-03-21-130706_events/: up.sql
migrations/2023-03-28-194113_users/: up.sql
migrations/2023-03-28-194320_login_history/: up.sql
migrations/2023-03-28-194447_login_history_field/: down.sql  up.sql
migrations/2023-04-10-073946_add-user-roles/: down.sql  up.sql
src/: constants.rs  main.rs  schema.rs  secret.key
src/api/: activity.rs  activity_controller.rs  api.rs  event.rs  event_controller.rs  mod.rs  user_controller.rs
src/config/: db.rs  mod.rs  routes.rs
src/controllers/: event_controller.rs  user_controller.rs
src/db/: db.rs
src/middleware/: auth.rs
src/models/: activity.rs  event.rs  login_history.rs  mod.rs  response.rs  user.rs  user_token.rs
src/services/: activity_service.rs  event_service.rs  mod.rs  user_service.rs
src/utils/: token_utils.rs
